[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

[dependencies]
mochi-macros = { path = "../macros" }
mochi-imports = { path = "../imports" }
mochi-extractors = { path = "../extractors" }
mochi-structs = { path = "../structs" }
mochi-proc-macros = { path = "../proc_macros" }

[features]
extractors = []