[package]
name = "mochi"
description = "This library allows creating mochi sources into wasm."
repository = "https://github.com/Mochi-Team/mochi-rs"
license = "MIT"
version = "0.0.1"
edition = "2021"

[dependencies]
mochi-macros = { path = "../macros" }
mochi-imports = { path = "../imports" }
mochi-extractors = { path = "../extractors" }
mochi-structs = { path = "../structs" }
mochi-proc-macros = { path = "../proc_macros" }

[features]
extractors = []